# ultra-state

./: .build-readme.txt  .cursorrules  .gitignore  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CLEANUP_SUMMARY.txt  LICENSE  README.md  RELEASE_CHECKLIST.md  analyzer.py  apo_old.py  app.py  build_mac.sh  build_windows.bat  db.py  gui.py  hr_zones.py  library_manager.py  pyproject.toml  requirements.txt  runner.icns  setup.py  ultra_state.db
.github/workflows/: python-package.yml
.kiro/specs/nicegui-refactor/: design.md  requirements.md  tasks.md
.playwright-cli/: page-2026-02-24T02-08-17-333Z.yml  page-2026-02-24T02-08-44-360Z.yml  page-2026-02-24T02-09-07-705Z.yml  page-2026-02-24T02-10-03-018Z.yml  page-2026-02-24T02-10-45-462Z.yml  page-2026-02-24T02-11-10-286Z.yml  page-2026-02-24T02-11-42-473Z.yml  page-2026-02-24T02-20-30-603Z.yml  page-2026-02-24T02-25-36-216Z.yml  page-2026-02-24T02-26-06-291Z.yml  page-2026-02-24T02-27-11-965Z.yml
components/: activity_modal.py  analysis_view.py  cards.py  charts.py  layout.py  library_modal.py  run_card.py
core/: data_manager.py  llm_export.py  map_payload.py
migrations/: 001_library_mode.sql
src/garmin_analyzer/: __init__.py  __main__.py  analyzer.py  cli.py  gui.py
tests/: analyzer_metrics_tests.py  library_manager_tests.py
