[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-fit-analyzer"
version = "1.0.0"
description = "A cross-platform desktop application for analyzing Garmin running fit files"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Your Name"}
]
requires-python = ">=3.8"
dependencies = [
    "fitparse>=1.2.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.0",
    "py2app>=0.28",
]

[project.scripts]
garmin-analyzer = "garmin_analyzer.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyinstaller]
onefile = true
console = false
disable-windowed-traceback = true
strip = true
upx = true
windowed = true

[tool.pyinstaller.bootloader]
ignore_signals = true

[tool.pyinstaller.options]
i18n = []
